--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -7,6 +7,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -147,7 +149,6 @@ jobs:
         tag_name: ""
         draft: true
         prerelease: true
-        token: ${{ secrets.RELEASE_TOKEN }}
         generate_release_notes: true
         files: |
           ios-ikc-${{ steps.getversion.outputs.version }}.zip
