chore: fix ios ci need write contents permissions

--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -18,7 +18,7 @@ plugins {
     id("signing")
 }
 
-version System.getProperty("VERSION") ?: project['version']
+version System.getenv("VERSION") ?: project['version']
 group 'io.github.consenlabs.android'
 
 afterEvaluate {
