--- a/publish/android/gradle.properties
+++ b/publish/android/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-version=2.6.5+1740c41
+version=0.0.1-SNAPSHOT
