--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -7,6 +7,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -55,7 +57,10 @@ jobs:
 
     - name: Read VERSION file
       id: getversion
-      run: echo "version=$(cat VERSION)+$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      run: |
+        echo "version=$(cat VERSION)+$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        echo "tag_name=$(cat VERSION)" >> $GITHUB_OUTPUT
+        echo "short_commit=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
     - name: Get commits
       id: getcommits
@@ -144,10 +149,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         name: "Release ${{ steps.getversion.outputs.version }}"
-        tag_name: ""
-        draft: true
-        prerelease: true
-        token: ${{ secrets.RELEASE_TOKEN }}
+        tag_name: "${{ steps.getversion.outputs.version }}"
+        target_commitish: "${{ steps.getversion.outputs.short_commit }}"
         generate_release_notes: true
         files: |
           ios-ikc-${{ steps.getversion.outputs.version }}.zip
