--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -7,6 +7,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -144,10 +146,9 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         name: "Release ${{ steps.getversion.outputs.version }}"
-        tag_name: ""
+        tag_name: "v${{steps.getversion.outputs.version}}"
         draft: true
         prerelease: true
-        token: ${{ secrets.RELEASE_TOKEN }}
         generate_release_notes: true
         files: |
           ios-ikc-${{ steps.getversion.outputs.version }}.zip
