feat: add generate mnemonic api

--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -19,6 +19,7 @@ tcx-constants = { path = "../tcx-constants"}
 tcx-tezos = {path = "../tcx-tezos"}
 tcx-eth2 = {path = "../tcx-eth2"}
 zksync-crypto = {path = "../zksync-crypto"}
+tcx-wallet = {path = "../tcx-wallet" }
 #zksync-crypto = { git="https://github.com/consenlabs/zksync", branch="hotfix/compatible_with_tcx" }
 
 prost = "0.11.2"
