--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members=[
     "token-core/tcx-tezos",
     "token-core/tcx-tester",
     "token-core/tcx-eth2",
+    "token-core/tcx-wallet",
     "token-core/zksync-crypto",
     "imkey-core/ikc",
     "imkey-core/ikc-common",
