--- a/token-core/tcx-wallet/Cargo.toml
+++ b/token-core/tcx-wallet/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto"}
 tcx-constants = { path = "../tcx-constants"}
+tcx-eth = {path = "../tcx-eth"}
+tcx-chain = {path = "../tcx-chain"}
 
 failure = "0.1.8"
 prost = "0.11.2"
