--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -20,6 +20,8 @@ tcx-tezos = {path = "../tcx-tezos"}
 tcx-eth2 = {path = "../tcx-eth2"}
 zksync-crypto = {path = "../zksync-crypto"}
 tcx-wallet = {path = "../tcx-wallet" }
+tcx-eth = {path = "../tcx-eth" }
+tcx-common = {path = "../tcx-common" }
 #zksync-crypto = { git="https://github.com/consenlabs/zksync", branch="hotfix/compatible_with_tcx" }
 
 prost = "0.11.2"
@@ -36,6 +38,9 @@ hex = "0.4.3"
 base64 = "0.13.1"
 base58 = "0.2.0"
 parking_lot = "0.12.1"
+ethereum-types = "0.14.0"
+ethers = "2.0.3"
+async-std = "1.12.0"
 
 [lib]
 name = "tcx"
