perf: pr comment improvement

--- a/token-core/tcx-wallet/Cargo.toml
+++ b/token-core/tcx-wallet/Cargo.toml
@@ -11,6 +11,7 @@ tcx-crypto = { path = "../tcx-crypto"}
 tcx-constants = { path = "../tcx-constants"}
 #tcx-eth = {path = "../tcx-eth"}
 tcx-chain = {path = "../tcx-chain"}
+tcx-common = {path = "../tcx-common"}
 
 failure = "0.1.8"
 prost = "0.11.2"
