--- a/token-core/tcx-crypto/Cargo.toml
+++ b/token-core/tcx-crypto/Cargo.toml
@@ -24,6 +24,7 @@ failure = "0.1.8"
 secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
 hex = "0.4.3"
 lazy_static = "1.4.0"
+regex = "1.9.3"
 
 parking_lot = "0.12.1"
 
