--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -14,6 +14,8 @@ tcx-tron = {path = "../tcx-tron"}
 tcx-ckb = {path = "../tcx-ckb"}
 tcx-filecoin = {path = "../tcx-filecoin"}
 tcx-substrate = {path = "../tcx-substrate"}
+tcx-atom = {path = "../tcx-atom"}
+tcx-eos = {path = "../tcx-eos"}
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants"}
 tcx-tezos = {path = "../tcx-tezos"}
@@ -40,6 +42,8 @@ base58 = "0.2.0"
 parking_lot = "0.12.1"
 ethers = "2.0.3"
 async-std = "1.12.0"
+
+strum = { version = "0.25", features = ["derive"] }
 
 [lib]
 name = "tcx"
