--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tcx-btc-kin"
 version = "0.1.0"
 authors = ["Neal Xu <imxuneal@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 tcx-crypto = { path = "../tcx-crypto" }
@@ -30,7 +30,7 @@ bech32 = "0.9.1"
 prost = "0.11.2"
 bytes = "1.3.0"
 prost-types = "0.11.2"
-
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 mockall = "0.11.3"
