--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -14,7 +14,7 @@ hex = "0.4.3"
 base64 = "0.13.1"
 
 bitcoin = "0.29.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
+secp256k1 = {version ="0.24.1", features = ["rand", "recovery", "rand-std"] }
 tiny-bip39 = "0.7.3"
 bitcoin_hashes = "0.11.0"
 #bitcoinconsensus = { version = "0.19.0-2", optional = true }
