Feature/support btc (#43)
* pin to Rust version 1.71.1

* rename WifDisplay to WIFDisplay

* add bitcoin segwit address

* add bitcoin tests

* fix!: wrong change address

* refactor bitcoin to support P2WPKH, P2SH-P2WPKH, P2PKH

* fix tests

* refactor: rename tcx-btc-fork to tcx-btc-kin

* refactor: simplify BtcForkNetwork and rename it to BtcKinNetwork

* add implemention for Native SegWit and Taproot

* derive the address based on the input's address type when signing

* add p2tr and p2wpkh tests

* use sig.verify for schnorr signature

* refactor: define const BTC_KIN_NETWORKS

---------

Co-authored-by: tyrone <2125081@qq.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver="2"
 members=[
     "token-core/tcx-proto",
     "token-core/tcx-constants",
@@ -6,7 +7,7 @@ members=[
     "token-core/tcx-crypto",
     "token-core/tcx-chain",
     "token-core/tcx-tron",
-    "token-core/tcx-btc-fork",
+    "token-core/tcx-btc-kin",
     "token-core/tcx-bch",
     "token-core/tcx-ckb",
     "token-core/tcx-atom",
