--- a/token-core/tcx-btc-kin/Cargo.toml
+++ b/token-core/tcx-btc-kin/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tcx-btc-fork"
+name = "tcx-btc-kin"
 version = "0.1.0"
 authors = ["Neal Xu <imxuneal@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 tcx-crypto = { path = "../tcx-crypto" }
@@ -14,7 +14,7 @@ hex = "0.4.3"
 base64 = "0.13.1"
 
 bitcoin = "0.29.2"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
+secp256k1 = {version ="0.24.1", features = ["rand", "recovery", "rand-std"] }
 tiny-bip39 = "0.7.3"
 bitcoin_hashes = "0.11.0"
 #bitcoinconsensus = { version = "0.19.0-2", optional = true }
@@ -30,7 +30,6 @@ bech32 = "0.9.1"
 prost = "0.11.2"
 bytes = "1.3.0"
 prost-types = "0.11.2"
-
 
 [dev-dependencies]
 mockall = "0.11.3"
