feat: migration mnemonic keystore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ members=[
     "token-core/tcx-eth",
     "token-core/zksync-crypto",
     "token-core/tcx-common",
+    "token-core/tcx-migration",
     "imkey-core/ikc",
     "imkey-core/ikc-common",
     "imkey-core/ikc-device",
