--- a/token-core/tcx-tezos/Cargo.toml
+++ b/token-core/tcx-tezos/Cargo.toml
@@ -12,6 +12,7 @@ tcx-constants = { path = "../tcx-constants" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
 
+failure = "0.1.8"
 blake2b_simd = "1.0.0"
 hex = "0.4.3"
 bitcoin = "0.29.2"
