--- a/token-core/tcx-examples/android/.gitignore
+++ b/token-core/tcx-examples/android/.gitignore
@@ -49,9 +49,9 @@ captures/
 .idea/navEditor.xml
 
 # Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
+# Uncomment the following lines if you do not want to check your fixtures files in.
 #*.jks
-#*.keystore
+#*.fixtures
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
