--- a/token-core/tcx-common/Cargo.toml
+++ b/token-core/tcx-common/Cargo.toml
@@ -10,7 +10,6 @@ failure = "0.1.8"
 hex = "0.4.3"
 regex = "1.7.0"
 keccak-hash = "0.10.0"
-sha2 = "0.10.6"
 hmac-sha256 = "1.1.6"
 rust-crypto = "0.2.36"
 ctr = "0.9.2"
@@ -18,3 +17,4 @@ aes = "0.8.3"
 secp256k1 = "0.27.0"
 bitcoin = "0.29.2"
 tiny-bip39 = "1.0.0"
+rand = "0.8.5"
