--- a/token-core/tcx-wallet/Cargo.toml
+++ b/token-core/tcx-wallet/Cargo.toml
@@ -29,3 +29,4 @@ secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
 multihash = "0.18.1"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
+byteorder = "1.4.3"
