--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ members=[
     "token-core/tcx-tezos",
     "token-core/tcx-tester",
     "token-core/tcx-eth2",
-    "token-core/tcx-wallet",
+    "token-core/tcx-identity",
     "token-core/tcx-eth",
     "token-core/zksync-crypto",
     "token-core/tcx-common",
