--- a/token-core/tcx-tron/Cargo.toml
+++ b/token-core/tcx-tron/Cargo.toml
@@ -9,6 +9,7 @@ tcx-crypto = { path = "../tcx-crypto" }
 tcx-chain = { path = "../tcx-chain" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-common = { path = "../tcx-common" }
 
 prost = "0.11.2"
 bytes = "1.3.0"
