--- a/token-core/tcx-chain/Cargo.toml
+++ b/token-core/tcx-chain/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 tcx-crypto = { path = "../tcx-crypto" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-identity = { path = "../tcx-identity" }
 
 bitcoin = "0.29.2"
 byteorder = "1.4.3"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
+secp256k1 = { version = "0.24.1", features = ["rand", "recovery"] }
 tiny-bip39 = "0.7.3"
 bitcoin_hashes = "0.11.0"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
