--- a/token-core/tcx-chain/Cargo.toml
+++ b/token-core/tcx-chain/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 tcx-crypto = { path = "../tcx-crypto" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
-tcx-identity = { path = "../tcx-identity" }
+tcx-common = {path = "../tcx-common"}
+# tcx-identity = { path = "../tcx-identity" }
 
 bitcoin = "0.29.2"
 byteorder = "1.4.3"
@@ -22,6 +23,11 @@ failure = "0.1.8"
 regex = "1.7.0"
 hex = "0.4.3"
 
+sha2 = "0.10.6"
+hmac-sha256 = "1.1.6"
+multihash = "0.18.1"
+lazy_static = "1.4.0"
+parking_lot = "0.12.1"
 prost = "0.11.2"
 bytes = "1.3.0"
 
