chore: rename tcx_chain to tcx_keystore

--- a/token-core/tcx-eos/Cargo.toml
+++ b/token-core/tcx-eos/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 tcx-crypto = { path = "../tcx-crypto" }
-tcx-chain = { path = "../tcx-chain" }
+tcx-keystore = { path = "../tcx-keystore" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = {path = "../tcx-common"}
