--- a/token-core/tcx-eth/Cargo.toml
+++ b/token-core/tcx-eth/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tcx-chain = {path = "../tcx-chain"}
+tcx-keystore = {path = "../tcx-keystore"}
 tcx-primitive = {path = "../tcx-primitive"}
 tcx-constants = {path = "../tcx-constants"}
 tcx-common = {path = "../tcx-common"}
