--- a/token-core/tcx-keystore/Cargo.toml
+++ b/token-core/tcx-keystore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tcx-chain"
+name = "tcx-keystore"
 version = "0.1.0"
 authors = ["Neal Xu <imxuneal@gmail.com>"]
 edition = "2021"
