--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members=[
     "token-core/tcx-constants",
     "token-core/tcx-primitive",
     "token-core/tcx-crypto",
-    "token-core/tcx-chain",
+    "token-core/tcx-keystore",
     "token-core/tcx-tron",
     "token-core/tcx-btc-kin",
     "token-core/tcx-ckb",
