--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tcx-chain = { path = "../tcx-chain" }
+tcx-keystore = { path = "../tcx-keystore" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
