dk keystore migrate feature (#47)
* feat: add calc external address

* feat: add keystore dk migration

* fix: ios and android keystore inconsistency

* feat: integrate ios dk keystore migration

* feat: implement the functions about identity

* chore: rename tcx_chain to tcx_keystore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members=[
     "token-core/tcx-constants",
     "token-core/tcx-primitive",
     "token-core/tcx-crypto",
-    "token-core/tcx-chain",
+    "token-core/tcx-keystore",
     "token-core/tcx-tron",
     "token-core/tcx-btc-kin",
     "token-core/tcx-ckb",
@@ -17,7 +17,6 @@ members=[
     "token-core/tcx-tezos",
     "token-core/tcx-tester",
     "token-core/tcx-eth2",
-    "token-core/tcx-identity",
     "token-core/tcx-eth",
     "token-core/zksync-crypto",
     "token-core/tcx-common",
