--- a/token-core/tcx-keystore/Cargo.toml
+++ b/token-core/tcx-keystore/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tcx-chain"
+name = "tcx-keystore"
 version = "0.1.0"
 authors = ["Neal Xu <imxuneal@gmail.com>"]
 edition = "2021"
@@ -8,10 +8,12 @@ edition = "2021"
 tcx-crypto = { path = "../tcx-crypto" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-common = {path = "../tcx-common"}
+# tcx-identity = { path = "../tcx-identity" }
 
 bitcoin = "0.29.2"
 byteorder = "1.4.3"
-secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
+secp256k1 = { version = "0.24.1", features = ["rand", "recovery"] }
 tiny-bip39 = "0.7.3"
 bitcoin_hashes = "0.11.0"
 uuid = { version = "1.2.2", features = ["serde", "v4"] }
@@ -21,6 +23,11 @@ failure = "0.1.8"
 regex = "1.7.0"
 hex = "0.4.3"
 
+sha2 = "0.10.6"
+hmac-sha256 = "1.1.6"
+multihash = "0.18.1"
+lazy_static = "1.4.0"
+parking_lot = "0.12.1"
 prost = "0.11.2"
 bytes = "1.3.0"
 
