--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 tcx-proto = { path = "../tcx-proto" }
 tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
-tcx-chain = { path = "../tcx-chain", features = ["cache_dk"] }
+tcx-keystore = { path = "../tcx-keystore", features = ["cache_dk"] }
 tcx-btc-kin = { path = "../tcx-btc-kin" }
 tcx-tron = { path = "../tcx-tron" }
 tcx-ckb = { path = "../tcx-ckb" }
@@ -20,7 +20,6 @@ tcx-constants = { path = "../tcx-constants" }
 tcx-tezos = { path = "../tcx-tezos" }
 tcx-eth2 = { path = "../tcx-eth2" }
 zksync-crypto = { path = "../zksync-crypto" }
-tcx-identity = { path = "../tcx-identity" }
 tcx-eth = { path = "../tcx-eth" }
 tcx-common = { path = "../tcx-common" }
 tcx-migration = { path = "../tcx-migration" }
