--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members=[
     "token-core/tcx",
     "token-core/tcx-tezos",
     "token-core/tcx-tester",
-    "token-core/tcx-eth2",
+    # "token-core/tcx-eth2",
     "token-core/tcx-eth",
     "token-core/zksync-crypto",
     "token-core/tcx-common",
