--- a/token-core/tcx-migration/Cargo.toml
+++ b/token-core/tcx-migration/Cargo.toml
@@ -16,7 +16,7 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-tezos = { path = "../tcx-tezos" }
 tcx-tron = { path = "../tcx-tron" }
-tcx-eth2 = { path = "../tcx-eth2" }
+# tcx-eth2 = { path = "../tcx-eth2" }
 tcx-eth = { path = "../tcx-eth" }
 tcx-common = { path = "../tcx-common" }
 #zksync-crypto = { git="https://github.com/consenlabs/zksync", branch="hotfix/compatible_with_tcx" }
