--- a/token-core/tcx-atom/Cargo.toml
+++ b/token-core/tcx-atom/Cargo.toml
@@ -10,6 +10,7 @@ tcx-crypto = { path = "../tcx-crypto" }
 tcx-keystore = { path = "../tcx-keystore" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-common = { path = "../tcx-common" }
 
 bech32 = "0.9.1"
 failure = "0.1.8"
