--- a/token-core/tcx-filecoin/Cargo.toml
+++ b/token-core/tcx-filecoin/Cargo.toml
@@ -11,6 +11,7 @@ tcx-crypto = { path = "../tcx-crypto" }
 tcx-keystore = { path = "../tcx-keystore" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-common = { path = "../tcx-common" }
 
 prost = "0.11.2"
 bytes = "1.3.0"
@@ -25,8 +26,6 @@ base64 = "0.13.1"
 
 num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.0"}
 
-
-hex = "0.4.3"
 lazy_static = "1.4.0"
 
 forest_vm = "0.3.2"
