--- a/token-core/tcx-primitive/Cargo.toml
+++ b/token-core/tcx-primitive/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 
 [dependencies]
 tcx-constants = { path = "../tcx-constants"}
+tcx-common = { path = "../tcx-common"}
+
 bitcoin = "0.29.2"
 byteorder = "1.4.3"
 secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
