--- a/token-core/tcx-substrate/Cargo.toml
+++ b/token-core/tcx-substrate/Cargo.toml
@@ -11,9 +11,9 @@ tcx-crypto = { path = "../tcx-crypto" }
 tcx-keystore = { path = "../tcx-keystore" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
+tcx-common = { path = "../tcx-common" }
 
 sp-core = "7.0.0"
-hex = "0.4.3"
 byteorder = "1.4.3"
 
 prost = "0.11.2"
