--- a/token-core/tcx-tezos/Cargo.toml
+++ b/token-core/tcx-tezos/Cargo.toml
@@ -11,6 +11,7 @@ tcx-keystore = { path = "../tcx-keystore" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
+tcx-common = { path = "../tcx-common" }
 
 failure = "0.1.8"
 blake2b_simd = "1.0.0"
