--- a/token-core/tcx-migration/Cargo.toml
+++ b/token-core/tcx-migration/Cargo.toml
@@ -36,3 +36,4 @@ base64 = "0.13.1"
 base58 = "0.2.0"
 parking_lot = "0.12.1"
 ethers = "2.0.3"
+uuid = { version = "1.2.2", features = ["serde", "v4"] }
