--- a/token-core/tcx-keystore/Cargo.toml
+++ b/token-core/tcx-keystore/Cargo.toml
@@ -30,6 +30,8 @@ parking_lot = "0.12.1"
 prost = "0.11.2"
 bytes = "1.3.0"
 
+tracing = "0.1.40"
+
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false
