--- a/token-core/tcx-primitive/Cargo.toml
+++ b/token-core/tcx-primitive/Cargo.toml
@@ -31,6 +31,8 @@ sha2 = "0.10.6"
 digest = "0.10.6"
 hkdf = "0.12.3"
 
+tracing = "0.1.40"
+
 sp-core = "7.0.0"
 regex = { version = "1.7.0"}
 schnorrkel = "0.9.1"
