--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -43,6 +43,10 @@ ethers = "2.0.3"
 
 strum = { version = "0.25", features = ["derive"] }
 
+tracing-oslog = "0.1.2"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+
 [lib]
 name = "tcx"
 crate-type = ["staticlib", "cdylib", "rlib"]
