--- a/token-core/tcx-eos/Cargo.toml
+++ b/token-core/tcx-eos/Cargo.toml
@@ -14,7 +14,7 @@ tcx-common = {path = "../tcx-common"}
 
 failure = "0.1.8"
 regex = "1.9.3"
-base58 = "0.2.0"
+bitcoin = "0.29.2"
 
 prost = "0.11.2"
 bytes = "1.3.0"
