--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -50,5 +50,6 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 prost-build = "0.11.4"
 
 [dev-dependencies]
+serial_test = "2.0.0"
 sp-core = "7.0.0"
 sp-runtime = "7.0.0"
