--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
-resolver="2"
-members=[
+resolver = "2"
+members = [
     "token-core/tcx-proto",
     "token-core/tcx-constants",
     "token-core/tcx-primitive",
@@ -20,20 +20,20 @@ members=[
     "token-core/tcx-eth",
     "token-core/tcx-common",
     "token-core/tcx-migration",
-    # "imkey-core/ikc",
-    # "imkey-core/ikc-common",
-    # "imkey-core/ikc-device",
-    # "imkey-core/ikc-proto",
-    # "imkey-core/ikc-transport",
-    # "imkey-core/ikc-wallet/coin-bitcoin",
-    # "imkey-core/ikc-wallet/coin-ethereum",
-    # "imkey-core/ikc-wallet/coin-eos",
-    # "imkey-core/ikc-wallet/coin-cosmos",
-    # "imkey-core/ikc-wallet/coin-ckb",
-    # "imkey-core/ikc-wallet/coin-substrate",
-    # "imkey-core/ikc-wallet/coin-tron",
-    # "imkey-core/ikc-wallet/coin-tezos",
-    # "imkey-core/ikc-wallet/coin-bch",
-    # "imkey-core/ikc-wallet/coin-filecoin",
-    # "imkey-core/ikc-wallet/coin-btc-fork",
+    "imkey-core/ikc",
+    "imkey-core/ikc-common",
+    "imkey-core/ikc-device",
+    "imkey-core/ikc-proto",
+    "imkey-core/ikc-transport",
+    "imkey-core/ikc-wallet/coin-bitcoin",
+    "imkey-core/ikc-wallet/coin-ethereum",
+    "imkey-core/ikc-wallet/coin-eos",
+    "imkey-core/ikc-wallet/coin-cosmos",
+    "imkey-core/ikc-wallet/coin-ckb",
+    "imkey-core/ikc-wallet/coin-substrate",
+    "imkey-core/ikc-wallet/coin-tron",
+    "imkey-core/ikc-wallet/coin-tezos",
+    "imkey-core/ikc-wallet/coin-bch",
+    "imkey-core/ikc-wallet/coin-filecoin",
+    "imkey-core/ikc-wallet/coin-btc-fork",
 ]
