--- a/token-core/tcx-constants/Cargo.toml
+++ b/token-core/tcx-constants/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tcx-common = { path = "../tcx-common" }
 failure = "=0.1.8"
 lazy_static = "=1.4.0"
 serde_json = "=1.0.89"
