--- a/token-core/test-data/.gitignore
+++ b/token-core/test-data/.gitignore
@@ -10,3 +10,7 @@
 !wallets-ios-2_14_1/*
 !scan-keystores-fixtures
 !scan-keystores-fixtures/*
+!mainnet-identity
+!mainnet-identity/*
+!testnet-identity
+!testnet-identity/*
