--- a/token-core/tcx-crypto/Cargo.toml
+++ b/token-core/tcx-crypto/Cargo.toml
@@ -17,7 +17,8 @@ sha2 = "=0.10.6"
 digest = "=0.10.6"
 hmac = "=0.12.1"
 block-modes = "=0.7.0"
-aes-ctr = "=0.6.0"
+aes = "=0.8.3"
+ctr = "=0.9.2"
 aes-soft = "=0.6.4"
 pbkdf2 = "=0.11.0"
 bitcoin_hashes = "=0.11.0"
