--- a/imkey-core/ikc-common/Cargo.toml
+++ b/imkey-core/ikc-common/Cargo.toml
@@ -27,7 +27,8 @@ prost-types = "=0.11.2"
 secp256k1 = {version = "=0.24.3", features = ["rand", "recovery"] }
 failure = "=0.1.8"
 lazy_static = "=1.4.0"
-aes-soft = "=0.6.4"
+aes = "=0.8.3"
+cbc = "=0.1.2"
 block-modes = "=0.7.0"
 parking_lot = "=0.12.1"
 bitcoin = "=0.29.2"
