--- a/token-core/tcx-crypto/Cargo.toml
+++ b/token-core/tcx-crypto/Cargo.toml
@@ -19,7 +19,7 @@ hmac = "=0.12.1"
 block-modes = "=0.7.0"
 aes = "=0.8.3"
 ctr = "=0.9.2"
-aes-soft = "=0.6.4"
+cbc = "=0.1.2"
 pbkdf2 = "=0.11.0"
 bitcoin_hashes = "=0.11.0"
 crypto-mac = "=0.11.1"
