--- a/token-core/tcx-eos/Cargo.toml
+++ b/token-core/tcx-eos/Cargo.toml
@@ -12,7 +12,7 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-constants = { path = "../tcx-constants" }
 tcx-common = {path = "../tcx-common"}
 
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 regex = "=1.9.3"
 bitcoin = "=0.29.2"
 
