--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -17,8 +17,9 @@ prost = "=0.11.2"
 bytes = "=1.4.0"
 lazy_static = "=1.4.0"
 prost-types = "=0.11.2"
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 regex = "=1.9.3"
 keccak-hash = "=0.10.0"
 ssz_rs = "=0.8.0"
 ssz_rs_derive = "=0.8.0"
+thiserror = "1.0.56"
