--- a/token-core/tcx-primitive/Cargo.toml
+++ b/token-core/tcx-primitive/Cargo.toml
@@ -18,10 +18,10 @@ bitcoin_hashes = "=0.11.0"
 hex-literal = "=0.3.4"
 hex = "=0.4.3"
 lazy_static = "=1.4.0"
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 serde = { version = "=1.0.147", features = ["derive"] }
 serde_json = "=1.0.89"
-tiny-bip39 = "=0.7.3"
+tiny-bip39 = "=1.0.0"
 ed25519-bip32 = "=0.3.2"
 ed25519-dalek = "=2.1.0"
 blake2b_simd = "=1.0.1"
@@ -35,3 +35,4 @@ hkdf = "=0.12.3"
 sp-core = "=7.0.0"
 regex = { version = "=1.9.3"}
 schnorrkel = "=0.9.1"
+thiserror = "1.0.56"
