--- a/token-core/tcx-atom/Cargo.toml
+++ b/token-core/tcx-atom/Cargo.toml
@@ -13,7 +13,7 @@ tcx-constants = { path = "../tcx-constants" }
 tcx-common = { path = "../tcx-common" }
 
 bech32 = "=0.9.1"
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 
 prost = "=0.11.2"
 bytes = "=1.4.0"
