--- a/token-core/tcx-common/Cargo.toml
+++ b/token-core/tcx-common/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 hex = "=0.4.3"
 regex = "=1.9.3"
 keccak-hash = "=0.10.0"
@@ -14,6 +14,7 @@ ctr = "=0.9.2"
 aes = "=0.8.3"
 secp256k1 = "=0.24.3"
 bitcoin = "=0.29.2"
-tiny-bip39 = "=0.7.3"
+tiny-bip39 = "=1.0.0"
 rand = "=0.8.5"
 ethereum-types = "0.14.0"
+thiserror = "1.0.56"
