--- a/token-core/tcx-constants/Cargo.toml
+++ b/token-core/tcx-constants/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 tcx-common = { path = "../tcx-common" }
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 lazy_static = "=1.4.0"
 serde_json = "=1.0.89"
 serde = { version = "=1.0.147", features = ["derive"] }
