--- a/token-core/tcx-keystore/Cargo.toml
+++ b/token-core/tcx-keystore/Cargo.toml
@@ -13,12 +13,12 @@ tcx-common = {path = "../tcx-common"}
 bitcoin = "=0.29.2"
 byteorder = "=1.4.3"
 secp256k1 = { version = "=0.24.3", features = ["rand", "recovery"] }
-tiny-bip39 = "=0.7.3"
+tiny-bip39 = "=1.0.0"
 bitcoin_hashes = "=0.11.0"
 uuid = { version = "=1.2.2", features = ["serde", "v4"] }
 serde = { version = "=1.0.147", features = ["derive"] }
 serde_json = "=1.0.89"
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 regex = "=1.9.3"
 hex = "=0.4.3"
 
@@ -29,6 +29,7 @@ lazy_static = "=1.4.0"
 parking_lot = "=0.12.1"
 prost = "=0.11.2"
 bytes = "=1.4.0"
+thiserror = "1.0.56"
 
 [dev-dependencies.cargo-husky]
 version = "1"
