--- a/token-core/tcx-tezos/Cargo.toml
+++ b/token-core/tcx-tezos/Cargo.toml
@@ -13,7 +13,7 @@ tcx-primitive = { path = "../tcx-primitive" }
 tcx-crypto = { path = "../tcx-crypto" }
 tcx-common = { path = "../tcx-common" }
 
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 blake2b_simd = "=1.0.1"
 hex = "=0.4.3"
 bitcoin = "=0.29.2"
