--- a/token-core/tcx-tron/Cargo.toml
+++ b/token-core/tcx-tron/Cargo.toml
@@ -17,12 +17,12 @@ bytes = "=1.4.0"
 hex-literal = "=0.3.4"
 bitcoin = "=0.29.2"
 secp256k1 = {version = "=0.24.3", features = ["rand", "recovery"] }
-tiny-bip39 = "=0.7.3"
+tiny-bip39 = "=1.0.0"
 bitcoin_hashes = "=0.11.0"
 serde = { version = "=1.0.147", features = ["derive"] }
 serde_json = "=1.0.89"
 uuid = { version = "=1.2.2", features = ["serde", "v4"] }
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 num-bigint = "=0.4.3"
 num-traits = "=0.2.15"
 num-integer = "=0.1.45"
