--- a/token-core/tcx/Cargo.toml
+++ b/token-core/tcx/Cargo.toml
@@ -32,7 +32,7 @@ libc = "=0.2.140"
 log = "=0.4.17"
 serde_json = "=1.0.89"
 serde = { version = "=1.0.147", features = ["derive"] }
-failure = "=0.1.8"
+anyhow = { version = "=1.0.79", features = [] }
 lazy_static = "=1.4.0"
 hex = "=0.4.3"
 base64 = "=0.13.1"
